--- a/2 - Data structures.ipynb
+++ b/2 - Data structures.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -228,9 +228,8 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -246,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,9 +254,8 @@
        "\"867-5309\""
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,9 +280,8 @@
        "\"555-FILK\""
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -300,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -312,9 +309,8 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -330,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -339,9 +335,8 @@
        "\"555-FILK\""
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -350,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -361,9 +356,8 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -379,25 +373,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
+     "ename": "KeyError",
      "evalue": "KeyError: key 1 not found",
      "output_type": "error",
      "traceback": [
-      "KeyError: key 1 not found",
-      "",
-      "Stacktrace:",
-      " [1] getindex(h::Dict{String, String}, key::Int64)",
-      "   @ Base ./dict.jl:482",
-      " [2] top-level scope",
-      "   @ In[13]:1",
-      " [3] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "KeyError: key 1 not found\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] getindex(h::Dict{String, String}, key::Int64)\n",
+      "   @ Base ./dict.jl:477\n",
+      " [2] top-level scope\n",
+      "   @ ~/Desktop/MyFolder/Projects/Introduction-to-Julia/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X34sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -1037,14 +1027,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a_ray = [1,2,3]\n",
+    "push!(a_ray,4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pop!(a_ray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1079,10 +1105,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: Cannot `convert` an object of type Int64 to an object of type String\nThe function `convert` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  convert(::Type{String}, !Matched::String)\n   @ Base essentials.jl:461\n  convert(::Type{T}, !Matched::T) where T<:AbstractString\n   @ Base strings/basic.jl:232\n  convert(::Type{T}, !Matched::AbstractString) where T<:AbstractString\n   @ Base strings/basic.jl:233\n  ...\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: Cannot `convert` an object of type Int64 to an object of type String\n",
+      "The function `convert` exists, but no method is defined for this combination of argument types.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  convert(::Type{String}, !Matched::String)\n",
+      "   @ Base essentials.jl:461\n",
+      "  convert(::Type{T}, !Matched::T) where T<:AbstractString\n",
+      "   @ Base strings/basic.jl:232\n",
+      "  convert(::Type{T}, !Matched::AbstractString) where T<:AbstractString\n",
+      "   @ Base strings/basic.jl:233\n",
+      "  ...\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] setindex!(h::Dict{String, String}, v0::Int64, key::String)\n",
+      "   @ Base ./dict.jl:355\n",
+      " [2] top-level scope\n",
+      "   @ ~/Desktop/MyFolder/Projects/Introduction-to-Julia/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y141sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
+   "source": [
+    "myphonebook[\"test\"] = 123"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"911\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myphonebook[\"Emergency\"] = string(911)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, String} with 3 entries:\n",
+       "  \"Jenny\"        => \"867-5309\"\n",
+       "  \"Emergency\"    => \"911\"\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myphonebook"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1098,10 +1193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 2 entries:\n",
+       "  \"Jenny\"        => 8675309\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "flexible_phonebook = Dict(\"Jenny\" => 8675309, \"Ghostbusters\" => \"555-2368\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1135,14 +1244,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "911"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "flexible_phonebook[\"Emergency\"] = 911"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 3 entries:\n",
+       "  \"Jenny\"        => 8675309\n",
+       "  \"Emergency\"    => 911\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "flexible_phonebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1164,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1194,6 +1337,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 2 entries:\n",
+       "  \"Jenny\"        => \"8675309\"\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myphonebook = Dict{String,Any}(\"Jenny\" => \"8675309\", \"Ghostbusters\" => \"555-2368\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "911"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myphonebook[\"Emergency\"] = 911"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 3 entries:\n",
+       "  \"Jenny\"        => \"8675309\"\n",
+       "  \"Emergency\"    => 911\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myphonebook"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1202,15 +1407,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.12.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.12.3"
   }
  },
  "nbformat": 4,
