--- a/4 - Conditionals.ipynb
+++ b/4 - Conditionals.ipynb
@@ -336,10 +336,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    " a = 9\n",
+    " \n",
+    " if a % 2==0\n",
+    "    println(a)\n",
+    " else\n",
+    "    println(\"odd\")\n",
+    " end"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,6 +363,23 @@
    "source": [
     "#### 5.2 \n",
     "Rewrite the code from 5.1 using a ternary operator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "(a%2==0) ? println(a) : println(\"odd\")"
    ]
   },
   {
@@ -359,15 +392,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.12.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.12.3"
   }
  },
  "nbformat": 4,
